fixed ellipse placement and author text, hero text still shifted though possibly line spacing or width or something, because shifted up and is more narrow so instead of 3 lines its 5 lines

--- a/src/components/Quote/Quote.css
+++ b/src/components/Quote/Quote.css
@@ -58,7 +58,7 @@
   height: 10px;
   width: 10px;
   background-color: white;
-  margin-left: 150px;
+  margin-left: 261px;
   margin-top: 75px;
 }
 
@@ -71,7 +71,8 @@
   font-weight: 650;
   padding-top: 0px;
   padding-bottom: 20px;
-  padding-left: 150px;
+  /* padding-left: 150px; */
+  margin-left:261px;
   letter-spacing: 4.4;
 
 }
